fix design on mobile

--- a/css/wordl_style.css
+++ b/css/wordl_style.css
@@ -296,6 +296,10 @@ header .menu-btn {
         grid-template-columns: repeat(30, 0.35rem);
         grid-template-rows: repeat(3, 2.6rem);
     }
+    .tile {
+        width: 50px;
+        height: 50px;
+    }
 }
 
 @media (min-width: 576px) {
@@ -313,6 +317,10 @@ header .menu-btn {
         width: fit-content;
         grid-template-columns: repeat(30, 0.6rem);
         grid-template-rows: repeat(3, 2.7rem);
+    }
+    .tile {
+        width: 55px;
+        height: 55px;
     }
 }
 
@@ -332,6 +340,10 @@ header .menu-btn {
         grid-template-columns: repeat(30, 0.85rem);
         grid-template-rows: repeat(3, 2.8rem);
     }
+    .tile {
+        width: 60px;
+        height: 60px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -350,6 +362,10 @@ header .menu-btn {
         grid-template-columns: repeat(30, 1.25rem);
         grid-template-rows: repeat(3, 2.9rem);
     }
+    .tile {
+        width: 65px;
+        height: 65px;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -367,5 +383,9 @@ header .menu-btn {
         width: fit-content;
         grid-template-columns: repeat(30, 1.5rem);
         grid-template-rows: repeat(3, 3rem);
+    }
+    .tile {
+        width: 70px;
+        height: 70px;
     }
 }
